@@ -2,21 +2,19 @@ package personthecat.catlib.util;
 
 import dev.architectury.injectables.annotations.ExpectPlatform;
 import lombok.experimental.UtilityClass;
+import net.minecraft.core.Holder;
 import net.minecraft.world.level.biome.Biome;
 import org.jetbrains.annotations.NotNull;
-import personthecat.catlib.registry.DynamicRegistries;
+import personthecat.catlib.data.BiomeType;
 import personthecat.catlib.exception.BiomeTypeNotFoundException;
 import personthecat.catlib.exception.MissingOverrideException;
-import personthecat.catlib.mixin.BiomeAccessor;
 
 import java.io.File;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import static personthecat.catlib.exception.Exceptions.noBiomeTypeNamed;
-import static personthecat.catlib.util.Shorthand.getEnumConstant;
+import static personthecat.catlib.util.LibUtil.getEnumConstant;
 
 @UtilityClass
 @SuppressWarnings("unused")
@@ -68,7 +66,7 @@ public class McUtils {
      * @return The given biome type, or else throws.
      */
     @NotNull
-    public static Biome.BiomeCategory assertBiomeType(final String id) {
+    public static BiomeType assertBiomeType(final String id) {
         return getBiomeType(id).orElseThrow(() -> noBiomeTypeNamed(id));
     }
 
@@ -76,17 +74,15 @@ public class McUtils {
      * @param id The name of the biome type being researched.
      * @return The given biome type, or else {@link Optional#empty}.
      */
-    public static Optional<Biome.BiomeCategory> getBiomeType(final String id) {
-        return getEnumConstant(id, Biome.BiomeCategory.class);
+    public static Optional<BiomeType> getBiomeType(final String id) {
+        return getEnumConstant(id, BiomeType.class);
     }
 
     /**
      * @param type The type of biome being researched.
      * @return A list of biomes for the given category.
      */
-    public static List<Biome> getBiomes(final Biome.BiomeCategory type) {
-        return StreamSupport.stream(DynamicRegistries.BIOMES.spliterator(), false)
-            .filter(biome -> ((BiomeAccessor) (Object) biome).getBiomeCategory().equals(type))
-            .collect(Collectors.toList());
+    public static List<Holder<Biome>> getBiomes(final BiomeType type) {
+        return type.getTag().stream().toList();
     }
 }
